fix auth swagger.
