# models/auth.go
@@ -1,17 +1,24 @@
 package models
 
+import "github.com/jinzhu/gorm"
+
 type Auth struct {
-	ID int `gorm:"primary_key" json:"id"`
-	Username string `json:"username"`
-	Password string `json:"password"`
+    ID          int     `gorm:"primary_key" json:"id"`
+    Username    string  `json:"username"`
+    Password    string  `json:"password"`
 }
 
-func CheckAuth(username, password string) bool {
-	var auth Auth
-	db.Select("id").Where(Auth{Username : username, Password : password}).First(&auth)
-	if auth.ID > 0 {
-		return true
-	}
+// CheckAuth checks if authentication information exists
+func CheckAuth(username, password string) (bool, error) {
+    var auth Auth
+    err := db.Select("id").Where(Auth{Username : username, Password : password}).First(&auth).Error
+    if err != nil && err != gorm.ErrRecordNotFound {
+        return false, err
+    }
 
-	return false
+    if auth.ID > 0 {
+        return true, nil
+    }
+
+    return false, nil
 }
