# models/models.go
@@ -1,53 +1,53 @@
 package models
 
 import (
-	"log"
-	"fmt"
+    "fmt"
+    "log"
+
+    "github.com/jinzhu/gorm"
+    _ "github.com/jinzhu/gorm/dialects/mysql"
+
+    "github.com/spark8899/go-gin-example/pkg/setting"
     "time"
-
-	"github.com/jinzhu/gorm"
-	_ "github.com/jinzhu/gorm/dialects/mysql"
-
-	"github.com/spark8899/go-gin-example/pkg/setting"
 )
 
 var db *gorm.DB
 
 type Model struct {
-	ID int `gorm:"primary_key" json:"id"`
-	CreatedOn int `json:"created_on"`
-	ModifiedOn int `json:"modified_on"`
-    DeletedOn int `json:"deleted_on"`
+    ID          int `gorm:"primary_key" json:"id"`
+    CreatedOn   int `json:"created_on"`
+    ModifiedOn  int `json:"modified_on"`
+    DeletedOn   int `json:"deleted_on"`
 }
 
 // Setup initializes the database instance
 func Setup() {
-	var err error
-	db, err = gorm.Open(setting.DatabaseSetting.Type, fmt.Sprintf("%s:%s@tcp(%s)/%s?charset=utf8&parseTime=True&loc=Local",
-		setting.DatabaseSetting.User,
-		setting.DatabaseSetting.Password,
-		setting.DatabaseSetting.Host,
-		setting.DatabaseSetting.Name))
+    var err error
+    db, err = gorm.Open(setting.DatabaseSetting.Type, fmt.Sprintf("%s:%s@tcp(%s)/%s?charset=utf8&parseTime=True&loc=Local",
+        setting.DatabaseSetting.User,
+        setting.DatabaseSetting.Password,
+        setting.DatabaseSetting.Host,
+        setting.DatabaseSetting.Name))
 
-	if err != nil {
-		log.Fatalf("models.Setup err: %v", err)
+    if err != nil {
+        log.Fatalf("models.Setup err: %v", err)
 	}
 
-	gorm.DefaultTableNameHandler = func(db *gorm.DB, defaultTableName string) string {
-		return setting.DatabaseSetting.TablePrefix + defaultTableName
-	}
+    gorm.DefaultTableNameHandler = func(db *gorm.DB, defaultTableName string) string {
+        return setting.DatabaseSetting.TablePrefix + defaultTableName
+    }
 
-	db.SingularTable(true)
-	db.Callback().Create().Replace("gorm:update_time_stamp", updateTimeStampForCreateCallback)
-	db.Callback().Update().Replace("gorm:update_time_stamp", updateTimeStampForUpdateCallback)
-	db.Callback().Delete().Replace("gorm:delete", deleteCallback)
-	db.DB().SetMaxIdleConns(10)
-	db.DB().SetMaxOpenConns(100)
+    db.SingularTable(true)
+    db.Callback().Create().Replace("gorm:update_time_stamp", updateTimeStampForCreateCallback)
+    db.Callback().Update().Replace("gorm:update_time_stamp", updateTimeStampForUpdateCallback)
+    db.Callback().Delete().Replace("gorm:delete", deleteCallback)
+    db.DB().SetMaxIdleConns(10)
+    db.DB().SetMaxOpenConns(100)
 }
 
 // CloseDB closes database connection (unnecessary)
 func CloseDB() {
-	defer db.Close()
+    defer db.Close()
 }
 
 // updateTimeStampForCreateCallback will set `CreatedOn`, `ModifiedOn` when creating
