# routers/api/auth.go
@@ -1,62 +1,66 @@
 package api
 
 import (
-	"net/http"
+    "net/http"
+    "fmt"
 
-	"github.com/gin-gonic/gin"
-	"github.com/astaxie/beego/validation"
+    "github.com/astaxie/beego/validation"
+    "github.com/gin-gonic/gin"
 
-	"github.com/spark8899/go-gin-example/pkg/e"
-	"github.com/spark8899/go-gin-example/pkg/util"
-	"github.com/spark8899/go-gin-example/pkg/logging"
-	"github.com/spark8899/go-gin-example/models"
+    "github.com/spark8899/go-gin-example/pkg/app"
+    "github.com/spark8899/go-gin-example/pkg/e"
+    "github.com/spark8899/go-gin-example/pkg/util"
+    "github.com/spark8899/go-gin-example/service/auth_service"
 )
 
 type auth struct {
-	Username string `valid:"Required; MaxSize(50)"`
-	Password string `valid:"Required; MaxSize(50)"`
+    Username string `valid:"Required; MaxSize(50)"`
+    Password string `valid:"Required; MaxSize(50)"`
 }
 
 // @Summary Get Auth
-// @Produce  json
-// @Param username query string true "userName"
-// @Param password query string true "password"
-// @Success 200 {object} gin.H
-// @Router /auth [get]
+// @Accept application/x-www-form-urlencoded
+// @Produce json
+// @Param user&password body string true "username=xxx&password=xxxx" default(username=test&password=test123456)
+// @Success 200 {object} app.Response
+// @Failure 500 {object} app.Response
+// @Router /auth [post]
 func GetAuth(c *gin.Context) {
-	username := c.Query("username")
-	password := c.Query("password")
+    appG := app.Gin{C: c}
+    valid := validation.Validation{}
 
-	valid := validation.Validation{}
-	a := auth{Username: username, Password: password}
-	ok, _ := valid.Valid(&a)
+    username := c.PostForm("username")
+    password := c.PostForm("password")
+    fmt.Println("username: ", username)
 
-	data := make(map[string]interface{})
-	code := e.INVALID_PARAMS
-	if ok {
-		isExist := models.CheckAuth(username, password)
-		if isExist {
-			token, err := util.GenerateToken(username, password)
-			if err != nil {
-				code = e.ERROR_AUTH_TOKEN
-			} else {
-				data["token"] = token
+    a := auth{Username: username, Password: password}
+    ok, _ := valid.Valid(&a)
 
-				code = e.SUCCESS
-			}
+    if !ok {
+        app.MarkErrors(valid.Errors)
+        appG.Response(http.StatusBadRequest, e.INVALID_PARAMS, nil)
+        return
+    }
 
-		} else {
-			code = e.ERROR_AUTH
-		}
-	} else {
-		for _, err := range valid.Errors {
-            logging.Info(err.Key, err.Message)
-        }
-	}
+    authService := auth_service.Auth{Username: username, Password: password}
+    isExist, err := authService.Check()
+    if err != nil {
+        appG.Response(http.StatusInternalServerError, e.ERROR_AUTH_CHECK_TOKEN_FAIL, nil)
+        return
+    }
 
-	c.JSON(http.StatusOK, gin.H{
-        "code" : code,
-        "msg" : e.GetMsg(code),
-        "data" : data,
+    if !isExist {
+        appG.Response(http.StatusUnauthorized, e.ERROR_AUTH, nil)
+        return
+    }
+
+    token, err := util.GenerateToken(username, password)
+    if err != nil {
+        appG.Response(http.StatusInternalServerError, e.ERROR_AUTH_TOKEN, nil)
+        return
+    }
+
+    appG.Response(http.StatusOK, e.SUCCESS, map[string]string{
+        "token": token,
     })
 }
