# routers/router.go
@@ -10,19 +10,22 @@ import (
     "github.com/swaggo/gin-swagger/swaggerFiles"
 
     "github.com/spark8899/go-gin-example/middleware/jwt"
+    "github.com/spark8899/go-gin-example/pkg/export"
+    "github.com/spark8899/go-gin-example/pkg/qrcode"
     "github.com/spark8899/go-gin-example/pkg/upload"
     "github.com/spark8899/go-gin-example/routers/api"
     "github.com/spark8899/go-gin-example/routers/api/v1"
 )
 
+// InitRouter initialize routing information
 func InitRouter() *gin.Engine {
     r := gin.New()
-
     r.Use(gin.Logger())
-
     r.Use(gin.Recovery())
 
+    r.StaticFS("/export", http.Dir(export.GetExcelFullPath()))
     r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
+    r.StaticFS("/qrcode", http.Dir(qrcode.GetQrCodeFullPath()))
 
     r.POST("/auth", api.GetAuth)
     r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -39,6 +42,10 @@ func InitRouter() *gin.Engine {
         apiv1.PUT("/tags/:id", v1.EditTag)
         //删除指定标签
         apiv1.DELETE("/tags/:id", v1.DeleteTag)
+        //导出标签
+        r.POST("/tags/export", v1.ExportTag)
+        //导入标签
+        r.POST("/tags/import", v1.ImportTag)
 
         //获取文章列表
         apiv1.GET("/articles", v1.GetArticles)
@@ -50,6 +57,8 @@ func InitRouter() *gin.Engine {
         apiv1.PUT("/articles/:id", v1.EditArticle)
         //删除指定文章
         apiv1.DELETE("/articles/:id", v1.DeleteArticle)
+        //生成文章海报
+        apiv1.POST("/articles/poster/generate", v1.GenerateArticlePoster)
     }
 
     return r
